[package]
name = "x2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.8"
oauth2 = "4.4.2"
reqwest = "0.11"
serde = "1.0.204"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
strum = { version = "0.26.3", features = ["derive"] }
