[package]
name = "x2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.8"
oauth2 = "4.4.2"
reqwest = {version = "0.11", features = ["gzip"]}
serde = {version = "1.0.204", features = ["derive"]}
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
strum = { version = "0.26.3", features = ["derive"] }
serde_json = "1.0.120"
urlencoding = "2.1.3"
lazy_static = "1.5.0"
chrono = "0.4.38"
geojson = "0.24.1"
getset = "0.1.2"
