[package]
name = "x2-benchmarks"
version = "0.1.0"
edition = "2021"
description = "X API Benchmarks"
repository = "https://github.com/mkeen/x2"
homepage = "https://mikekeen.com/x2"
documentation = "https://docs.rs/x2"
license = "Apache-2.0"
readme = "README"
authors = ["Mike Keen <mwk@mikekeen.com>"]

[dependencies]

[dev-dependencies]
criterion = "^0.5"
x2 = { path = "../x2"}

[[bench]]
name = "request"
harness = false
