[package]
name = "x2-derive"
version = "0.1.0"
edition = "2021"
description = "X API"
repository = "https://github.com/mkeen/x2"
homepage = "https://mikekeen.com/x2"
documentation = "https://docs.rs/x2"
license = "Apache-2.0"
readme = "../README"
authors = ["Mike Keen <mwk@mikekeen.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "^1"
syn = "^2"

[dev-dependencies]
x2 = { path = "../x2" }