[package]
name = "x2-tests"
version = "0.1.0"
edition = "2021"
description = "X API"
repository = "https://github.com/mkeen/x2"
homepage = "https://mikekeen.com/x2"
documentation = "https://docs.rs/x2"
license = "Apache-2.0"
readme = "README"
authors = ["Mike Keen <mwk@mikekeen.com>"]

[dependencies]

[dev-dependencies]
x2 = { path = "../x2" }
