[package]
name = "x2"
version = "0.1.0"
edition = "2021"
description = "X API"
repository = "https://github.com/mkeen/x2"
homepage = "https://mikekeen.com/x2"
documentation = "https://docs.rs/x2"
license = "Apache-2.0"
readme = "README"
authors = ["Mike Keen <mwk@mikekeen.com>"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
geojson = "0.24.1"
reqwest = { version = "0.11", features = ["gzip", "blocking", "json"] }
reqwest-oauth1 = { path = "../../reqwest-oauth1", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
tinyvec = "1.8.0"
urlencoding = "2.1.3"
x2-derive = { path = "../x2-derive" }
